--- a/style.css
+++ b/style.css
@@ -9,12 +9,19 @@ body {
 
 .card {
   width: 90%;
-  max-width: 470px;
+  height: 90vh;
+  /* max-width: 470px; */
   background: linear-gradient(135deg, #00feba, #5b548a);
   color: #fff;
-  margin: 100px auto 0;
+  margin: 70px auto 0;
   padding: 40px 35px;
   text-align: center;
+  border-radius: 20px;
+  align-content: center;
+}
+.card h1 {
+  font-size: 4rem;
+  margin-bottom: 10rem;
   border-radius: 20px;
 }
 .search {
@@ -22,6 +29,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  margin-bottom: 5rem;
 }
 .search input {
   border: none;
